CastTransportIPC can send messages to uninitialized channel id.

BUG=660661

Review-Url: https://codereview.chromium.org/2516243002
Cr-Commit-Position: refs/heads/master@{#433732}

Former-commit-id: 851a15bc4a14c8fc9867cf9a29da6e7b1acb79ee